--- a/app/views/novedades/mainNovedades.scala.html
+++ b/app/views/novedades/mainNovedades.scala.html
@@ -11,6 +11,7 @@
 				@if(Componente.check("calendario")) {
 					<li><a href="@controllers.novedades.routes.NovedadesController.index()">Calendario</a></li>
 					<li><a href="@controllers.novedades.routes.NovedadesController.indexListaNovedades()">Lista Novedades</a></li>
+					<li><a href="@controllers.novedades.routes.PlanificacionesController.index()">Planificacion</a></li>
 				}
 
 
