--- a/app/views/novedades/calendar/crearFechaMasivaNovedad.scala.html
+++ b/app/views/novedades/calendar/crearFechaMasivaNovedad.scala.html
@@ -33,7 +33,7 @@
 		<div class="col-sm-6">
 				<label for="servicio" class="control-label">Servicio</label>
 				<div class="input-group @if(nForm.error("servicio_id")  != null) {has-error} else {has-required}">
-					@inputText(nForm("servicio.nombre"),'class -> "form-control",'id -> "servicioModal", 'disabled -> "disabled")
+					@inputText(nForm("servicio.nombre"),'class -> "form-control",'id -> "servicioModal")
 					@inputText(nForm("servicio_id"),'hidden -> "hidden",'id -> "servicio_id_modal")
 					<span class="input-group-addon">
 					<!-- <a href="#" class="searchModal"
@@ -52,6 +52,15 @@
 				@nForm("departamento_id").error.map{ error =>
 						<div class="text-error">@error.message</div>
 					}
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6">
+			<label class="control-label">Planificacion
+			@select(nForm("planificacion_id"), models.novedades.Planificacion.getPlanificacionEnCursoByOrganigrama().map { p => p.id.toString -> p.nombre},
+			'class -> "form-control select", '_default -> "Seleccionar")
+			</label>
+			@nForm("planificacion_id").error.map{ error =><div class="text-error">@error.message</div>}
 		</div>
 	</div>
 	<hr/>
