--- a/app/views/novedades/listaNovedades/indexListaNovedades.scala.html
+++ b/app/views/novedades/listaNovedades/indexListaNovedades.scala.html
@@ -102,7 +102,8 @@
 					<!-- <th width="30">#</th> -->
 					<th width="70">Fecha</th>
 					<th>Agente</th>
-					<th width="80">Servicio</th>
+					<th width="">Servicio</th>
+					<th width="">Planificacion</th>
 					<th width="30">#</th>
 				</tr>
 			</thead>
@@ -114,6 +115,7 @@
 						<td class="fechaRecuperoFactura">@if(rf.fecha_inicio != null){@(utils.DateUtils.formatDate(rf.fecha_inicio))}</td>
 						<td>@(rf.agente.apellido)</td>
 						<td>@(rf.servicio.nombre)</td>
+						<td>@(rf.planificacion.nombre)</td>
 						<td>
 							<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.novedades.routes.NovedadesController.eliminar(rf.id)&@UriTrack.encode()">
 							<i class="glyphicon glyphicon-trash icono-eliminar"></i>
