--- a/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
@@ -6,6 +6,11 @@
 
 @if(!formularioCarga){
 <div class="row">
+	<div class="col-sm-12">
+		@views.html.novedades.planificaciones.listaNovedades(planificacion)
+	</div>
+</div>
+<div class="row">
 	<div class="col-sm-6">
 		 <div class="panel panel-default">
 			<div class="panel-heading"><b>Detalles</b></div>
