--- a/app/views/novedades/listaNovedades/listaNovedadesPlanificacion.scala.html
+++ b/app/views/novedades/listaNovedades/listaNovedadesPlanificacion.scala.html
@@ -13,6 +13,7 @@
 
 					<th width="70">Fecha</th>
 					<th>Agente</th>
+					<th>Habiles</th>
 
 
 
@@ -20,13 +21,10 @@
 			</thead>
 			<tbody>
 				@for(rf <- paginador.getList) {
-					<tr class="pointer" data-estado="">
-
+					<tr class="@if(rf.habiles) {borrador}else{red}">
 						<td class="fechaRecuperoFactura">@if(rf.fecha_inicio != null){@(utils.DateUtils.formatDate(rf.fecha_inicio))}</td>
 						<td>@(rf.agente.apellido)</td>
-
-
-
+						<td>@if(rf.habiles){SI}else{NO}</td>
 					</tr>
 				}
 			</tbody>
