--- a/app/views/dashboard/controlDeuda/autorizadoDistintoDePagado.scala.html
+++ b/app/views/dashboard/controlDeuda/autorizadoDistintoDePagado.scala.html
@@ -1,9 +1,9 @@
-@(r:List[models.informes.InformeDeudaProveedoresMaterializada])
+@(r:List[models.informes.InformeEstadisticoDeudaProveedores])
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.dashboard.mainDashboard(title = "Listado Deuda Autorizado Distinto de Pagado") {
-    
+
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-9">
@@ -17,7 +17,7 @@
 <table class="table table-striped table-bordered" id="listaInforme">
 	<thead>
 		<tr>
-			<th width="40">Orden</th>
+			<th width="40">Ordenddd</th>
 			<th width="60">Expediente</th>
 			<th width="30">Cuenta</th>
 			<th width="130">Rubro</th>
@@ -31,9 +31,9 @@
 		</tr>
 	</thead>
 	<tbody>
-	
+
 		@for(informe <- r) {
-         
+
 		<tr>
 			<td>@informe.numero_orden_provision
 			<br>@if(informe.tipo_moneda != null){<span style="color:green;font-weight:bold;font-size: 12px;">M.E.</span>}
@@ -52,12 +52,12 @@
 
 			</td>
 			<td class="totalCompromiso" data-valor="@informe.totalCompromiso">
-			
+
 
 					@utils.NumberUtils.moneda(informe.totalCompromiso)
 
-				
-			</td>		
+
+			</td>
 		</tr>
         }
 	</tbody>
