--- a/app/views/dashboard/controlDeuda/autorizadoDistintoDePagado.scala.html
+++ b/app/views/dashboard/controlDeuda/autorizadoDistintoDePagado.scala.html
@@ -17,7 +17,7 @@
 <table class="table table-striped table-bordered" id="listaInforme">
 	<thead>
 		<tr>
-			<th width="40">Ordenddd</th>
+			<th width="40">Orden</th>
 			<th width="60">Expediente</th>
 			<th width="30">Cuenta</th>
 			<th width="130">Rubro</th>
