--- a/app/views/informes/navInformes.scala.html
+++ b/app/views/informes/navInformes.scala.html
@@ -1,6 +1,6 @@
- 
+@import models.auth._
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <div class="row"  style="">
 
@@ -11,6 +11,7 @@
 		      	<li>
 		        <!--  <a href="@controllers.informes.routes.InformesObligacionController.obligacion()" >OBLIGACIONES</a>-->
 		        </li>
+		        @if(Permiso.check("verInformesHonorarios")) {
 		        <li>
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">HONORARIOS <b class="caret"></b></a>
 		        	<ul class="dropdown-menu">
@@ -18,14 +19,25 @@
 			        	<li><a href="@controllers.informes.routes.InformesHonorariosController.honorarioRrhhPorPeriodo()" >RRHH Por periodos</a></li>
 		        	</ul>
 		        </li>
+				}
+				@if(Permiso.check("verInformeDeudas")) {
 		        <li>
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">DEUDAS <b class="caret"></b></a>
 		        	<ul class="dropdown-menu">
 			        	<li><a href="@controllers.informes.routes.InformesDeudasController.deudasFotoPorFecha()" >Corte Por Fecha Otros Proveedores</a></li>
 			        </ul>
 		        </li>
+		        }
+		        @if(Permiso.check("verInformeLaboratorio")) {
+		        <li>
+		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">LABORARATORIO <b class="caret"></b></a>
+		        	<ul class="dropdown-menu">
+			        	<li><a href="@controllers.informes.routes.InformeLaboratorioController.controlProductoPorMesPorInstitucion()" >Recepciones Productos Mensual</a></li>
+			        </ul>
+		        </li>
+		        }
 		        <!--<li class="dropdown">
-		         	
+
 		           <a href="#" class="dropdown-toggle" data-toggle="dropdown">PRESUPUESTO <b class="caret"></b></a>
 		          <ul class="dropdown-menu">
 		          	<li><a href="@controllers.informes.routes.InformesPresupuestoController.creditos(-1)">Todos</a></li>
@@ -41,11 +53,11 @@
 		          </ul>
 		        </li> -->
 		     </ul>
-		      	
-		    </div>  
-	   		
+
+		    </div>
+
 		</div>
-		 
+
 	</nav>
 </div>
 <script type="text/javascript">
