--- a/app/views/patrimonio/ordenesProvision/listadoProductosSolicitados.scala.html
+++ b/app/views/patrimonio/ordenesProvision/listadoProductosSolicitados.scala.html
@@ -8,7 +8,7 @@
 	var pacientes:String = new String()
 	if(linea != null && linea.ordenLineaCliente != null && linea.ordenLineaCliente.size() > 0){
 		for(olp <- linea.ordenLineaCliente) {
-			pacientes += olp.cliente.nombre.toUpperCase()+" - ID:"+olp.cliente.id_paciente_rismi+"\n" 
+			pacientes += olp.cliente.nombre.toUpperCase()+" - ID:"+olp.cliente.id_paciente_rismi+"\n"
 		}
 	}
 	pacientes
@@ -18,10 +18,10 @@
 @if(buscador.getTotalRowCount == 0) {
     <div class="well">
     	<em>No se encuentran resultados</em>
-    </div>  
+    </div>
 } else {
-   	Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-   
+   	Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 	<table class="table table-striped table-bordered table-hover" style="margin-top: 20px">
 		<thead>
 			<tr>
@@ -52,7 +52,7 @@
 				<td>@utils.NumberUtils.moneda(o.precio)</td>
 				<td>@utils.NumberUtils.moneda(o.getTotal())</td>
 
-				@if(o.cantidadPacientes != null && o.cantidadPacientes > 0){
+				@if(o.cantidadPacientes > 0){
 					<td><div class='tip-top pointer' title='@getPacientes(o.getOrdenLinea())'><i class="glyphicon glyphicon-user"></i></div></td>
 				}else{
 					<td></td>
@@ -65,13 +65,13 @@
 	    @views.html.helpers.paginador(buscador, controllers.patrimonio.routes.OrdenesProvisionController.verProductosSolicitados())
 	</div>
 		}
-		
+
 </div>
 <script>
 	$( function(){
-		
-		 
-		
+
+
+
 		$('#checkAllLineaSolicitados').on('change', function(){
 			var c = $(this).prop("checked");
 			var target = $(this).attr('data-check');
