--- a/app/views/patrimonio/ordenesProvision/listadoProductosSolicitados.scala.html
+++ b/app/views/patrimonio/ordenesProvision/listadoProductosSolicitados.scala.html
@@ -52,7 +52,7 @@
 				<td>@utils.NumberUtils.moneda(o.precio)</td>
 				<td>@utils.NumberUtils.moneda(o.getTotal())</td>
 
-				@if(o.cantidadPacientes != null && o.cantidadPacientes > 0){
+				@if(o.cantidadPacientes != null && o.cantidadPacientes.compareTo(new Integer(0)) > 0){
 					<td><div class='tip-top pointer' title='@getPacientes(o.getOrdenLinea())'><i class="glyphicon glyphicon-user"></i></div></td>
 				}else{
 					<td></td>
