--- a/app/views/informes/navInformes.scala.html
+++ b/app/views/informes/navInformes.scala.html
@@ -30,7 +30,7 @@
 		        }
 		        @if(Permiso.check("verInformeLaboratorio")) {
 		        <li>
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">LABORARATORIO <b class="caret"></b></a>
+		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">LABORATORIO <b class="caret"></b></a>
 		        	<ul class="dropdown-menu">
 			        	<li><a href="@controllers.informes.routes.InformeLaboratorioController.controlProductoPorMesPorInstitucion()" >Recepciones Productos Mensual</a></li>
 			        </ul>
