--- a/app/views/novedades/planificaciones/indexPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/indexPlanificaciones.scala.html
@@ -4,7 +4,7 @@
 @import models.auth._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @scripts = {
-	<script src="@routes.Assets.at("javascripts/rrhh/novedades.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/rrhh/planificacion.js")" type="text/javascript"></script>
 }
 
 
@@ -106,16 +106,20 @@
 			<thead>
 
 			    <tr style="background: #FFFFFF;">
-			        <td colspan="9">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td colspan="13">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
 		        </tr>
 				<tr>
 					<th width="10"><input type="checkbox" name="checkAll" id="checkAll"/></th>
 					<th width="30">#</th>
 					<th width="">Nombre</th>
+					<th width="">Tipo</th>
 					<th width="">Servicio</th>
-					<th width="50">Fecha Inicio</th>
-					<th width="50">Fecha Fin</th>
+					<th width="">Fecha Inicio</th>
+					<th width="">Fecha Fin</th>
 					<th width="">Periodo</th>
+
+					<th width="30">Hs Habiles</th>
+					<th width="30">Hs Inhabiles</th>
 					<th width="100">Estado</th>
 					<th width="30">#</th>
 				</tr>
@@ -127,10 +131,13 @@
 					<td><input type="checkbox" name="check_listado[]" value="@planilla.id" class="notSeleccion" id="check-@planilla.id"/></td>
 					<td><a class="btn btn-default btn-xs notSeleccion" href="@controllers.novedades.routes.PlanificacionesController.editar(planilla.id)&@UriTrack.encode()"><i class="glyphicon glyphicon-edit"></i></a></td>
 					<td>@(planilla.nombre)</td>
+					<td>@(planilla.tipoPlanificacion.nombre)</td>
 					<td>@(planilla.organigrama.nombre)</td>
 					<td class="fecha">@if(planilla.fecha_inicio != null){@(utils.DateUtils.formatDate(planilla.fecha_inicio))}</td>
 					<td class="fecha">@if(planilla.fecha_fin != null){@(utils.DateUtils.formatDate(planilla.fecha_fin))}</td>
 					<td>@if(planilla.periodo != null){@(planilla.periodo.nombre)}</td>
+					<td>@if(planilla.horashabiles != null){@(planilla.horashabiles)}</td>
+					<td>@if(planilla.horasinhabiles != null){@(planilla.horasinhabiles)}</td>
 					<td class="estado" align="center">@if(planilla.estado != null){ @(planilla.estado.nombre)}</td>
 					<td>
 						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.novedades.routes.PlanificacionesController.eliminar(planilla.id)&@UriTrack.encode()">
@@ -143,7 +150,7 @@
 	        </tbody>
 	        <tfoot>
 		        <tr>
-			        <td colspan="9">&nbsp</td>
+			        <td colspan="13">&nbsp</td>
 				</tr>
 	        </tfoot>
         </table>
