--- a/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
@@ -18,7 +18,15 @@
 
 				<div class="row margin-bottom-25">
 					<div class="col-sm-12">
-
+						<h4>Habiles:
+							<b>@planificacion.habiles</b>
+						</h4>
+						<h4>Inhabiles:
+							<b>@planificacion.inhabiles</b>
+						</h4>
+						<h4>Estado:
+							<b>@planificacion.estado.nombre</b>
+						</h4>
 
 					</div>
 				</div>
