--- a/app/views/novedades/listaNovedades/indexListaNovedades.scala.html
+++ b/app/views/novedades/listaNovedades/indexListaNovedades.scala.html
@@ -101,6 +101,7 @@
 					<th width="30"><input type="checkbox" name="checkAll" id="checkAll"/></th>
 					<!-- <th width="30">#</th> -->
 					<th width="70">Fecha</th>
+					<th style="text-align: center;" width="70">HS</th>
 					<th width="70">Habiles</th>
 					<th>Agente</th>
 					<th width="">Servicio</th>
@@ -114,7 +115,8 @@
 						<td><input type="checkbox" name="check_listado[]" value="@rf.id" class="notSeleccion" id="check-@rf.id"/></td>
 						<!-- <td><a class="btn btn-default btn-xs notSeleccion" href="@controllers.novedades.routes.NovedadesController.editar(rf.id)&@UriTrack.encode()"><i class="glyphicon glyphicon-edit"></i></a></td>-->
 						<td class="fechaRecuperoFactura">@if(rf.fecha_inicio != null){@(utils.DateUtils.formatDate(rf.fecha_inicio))}</td>
-						<td>@if(rf.habiles){SI}else{NO}</td>
+						<td align="center">@(rf.horas)</td>
+						<td align="center">@if(rf.habiles){SI}else{NO}</td>
 						<td>@(rf.agente.apellido)</td>
 						<td>@(rf.servicio.nombre)</td>
 						<td>@(rf.planificacion.nombre)</td>
