--- a/app/views/novedades/calendar/crearFechaMasivaNovedad.scala.html
+++ b/app/views/novedades/calendar/crearFechaMasivaNovedad.scala.html
@@ -30,6 +30,16 @@
 			</label>
 				@nForm("agente_id").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
+
+		<div class="col-sm-2">
+			<label class="control-label">Horas</label>
+			<div class="form-group @if(nForm.error("horas")  != null) {has-error} else {has-required}">
+				@inputText(nForm("horas"),'class -> "form-control", 'autocomplete -> "off", 'id -> "horas")
+			</div>
+			@nForm("horas").error.map{ error =><div class="text-error">@error.message</div>}
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-sm-6">
 				<label for="servicio" class="control-label">Servicio</label>
 				<div class="input-group @if(nForm.error("servicio_id")  != null) {has-error} else {has-required}">
@@ -53,8 +63,6 @@
 						<div class="text-error">@error.message</div>
 					}
 		</div>
-	</div>
-	<div class="row">
 		<div class="col-sm-6">
 			<label class="control-label">Planificacion
 			@select(nForm("planificacion_id"), models.novedades.Planificacion.getPlanificacionEnCursoByOrganigrama().map { p => p.id.toString -> p.nombre},
@@ -101,7 +109,7 @@
 		$('#searchAgenteModal').modalSearch();
 		$('#searchServicioModal').modalSearch();
 
-		$("#horas").mask("99:99");
+		$("#horas").numeric_input();
 		$('#multipleFechas').multiDatesPicker({altField:'#fechas'});
 
 		if($("#agenteModal").length){
