--- a/app/views/novedades/calendar/verNovedad.scala.html
+++ b/app/views/novedades/calendar/verNovedad.scala.html
@@ -22,7 +22,7 @@
 
 	<div class="col-sm-3">
 		<label class="control-label">Total de horas</label>
-		<p class="form-control-static form-control">@utils.DateUtils.formatDate(linea.horas, "HH:mm")</p>
+		<p class="form-control-static form-control">@linea.horas</p>
 	</div>
 
 
