--- a/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
@@ -1,4 +1,8 @@
-@(formularioCarga: Boolean, planificacionForm: Form[models.novedades.Planificacion] = null,planificacion:models.novedades.Planificacion = null)
+@(formularioCarga: Boolean,
+planificacionForm: Form[models.novedades.Planificacion] = null,
+planificacion:models.novedades.Planificacion = null,
+diasHabilesInhabiles: java.util.Map[String,Integer],
+totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 @import utils._
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
@@ -10,6 +14,9 @@
 		@views.html.novedades.planificaciones.listaNovedades(planificacion)
 	</div>
 </div>
+
+
+
 <div class="row">
 	<div class="col-sm-6">
 		 <div class="panel panel-default">
@@ -18,15 +25,37 @@
 
 				<div class="row margin-bottom-25">
 					<div class="col-sm-12">
-						<h4>Habiles:
+						<table class="table table-bordered">
+							<thead>
+								<tr>
+									<th colspan="2" style="text-align: center;">Habiles HS</th>
+									<th colspan="2" style="text-align: center;">Inhabiles HS</th>
+								</tr>
+								<tr>
+									<th style="text-align: center;">Dispo</th>
+									<th style="text-align: center;">Cargadas</th>
+									<th style="text-align: center;">Dispo</th>
+									<th style="text-align: center;">Cargadas</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td align="center">@diasHabilesInhabiles.get("habilesHoras")</td>
+									<td align="center">@if(planificacion.horashabiles!= null){@planificacion.horashabiles}else{0}</td>
+									<td align="center">@diasHabilesInhabiles.get("inhabilesHoras")</td>
+									<td align="center">@if(planificacion.horasinhabiles!= null){@planificacion.horasinhabiles}else{0}</td>
+								</tr>
+							</tbody>
+
+						</table>
+						<!-- <h4>:
 							<b>@planificacion.habiles</b>
 						</h4>
 						<h4>Inhabiles:
 							<b>@planificacion.inhabiles</b>
-						</h4>
-						<h4>Estado:
-							<b>@planificacion.estado.nombre</b>
-						</h4>
+						</h4> -->
+
+
 
 					</div>
 				</div>
@@ -36,46 +65,71 @@
 	</div>
 	<div class="col-sm-6">
 		<div class="panel panel-default">
-		<div class="panel-heading"><b>Acciones</b></div>
-		<div class="panel-body">
+			<div class="panel-heading"><b>Acciones</b></div>
+			<div class="panel-body">
 
-			<div class="row margin-bottom-25">
+				<div class="row margin-bottom-25">
 
-						<div class="col-sm-12">
-							<div class="row">
+					<div class="col-sm-12">
+						<div class="row">
 
-								@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(planificacion.estado.orden,models.Estado.TIPO_PLANIFICACION)) {
-									@if(estado.orden <= 3) {
-										<div class="col-sm-3">
-											<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
-												<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
-											</a>
-										</div>
-
-									}
-								}
-
-								@if(planificacion.estado.id == models.Estado.PLANIFICIACION_CANCELADO) {
+							@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(planificacion.estado.orden,models.Estado.TIPO_PLANIFICACION)) {
+								@if(estado.orden <= 3) {
 									<div class="col-sm-3">
-										<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_BORRADOR)@UriTrack.get("&")" class="btn btn-default">
-											<i class="glyphicon glyphicon-arrow-right"></i> Volver a Borrador
+										<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
+											<i class="glyphicon glyphicon-arrow-right"></i> @estado.nombre
 										</a>
 									</div>
-								}else{
-									<div class="col-sm-3">
-										<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_CANCELADO)@UriTrack.get("&")" class="btn btn-default">
-											<i class="glyphicon glyphicon-minus-sign"></i> Cancelar Planificacion
-										</a>
-									</div>
-								}
 
-							</div>
+								}
+							}
+
+							@if(planificacion.estado.id == models.Estado.PLANIFICIACION_CANCELADO) {
+								<div class="col-sm-3">
+									<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_BORRADOR)@UriTrack.get("&")" class="btn btn-default">
+										<i class="glyphicon glyphicon-arrow-right"></i> Volver a Borrador
+									</a>
+								</div>
+							}else{
+								<div class="col-sm-3">
+									<a href="@controllers.novedades.routes.PlanificacionesController.cambiarEstado(planificacionForm.field("id").value.toInt, models.Estado.PLANIFICIACION_CANCELADO)@UriTrack.get("&")" class="btn btn-default">
+										<i class="glyphicon glyphicon-minus-sign"></i> Cancelar Planificacion
+									</a>
+								</div>
+							}
 
 						</div>
-					</div>
+							<hr>
 
+							<h4>Estado:
+								<b>@planificacion.estado.nombre</b>
+							</h4>
+
+					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-12">
+		<table id="" class="table table-striped table-bordered">
+			<thead>
+				<tr>
+				 	<th>Fecha</th>
+					<th>Horas</th>
+				<tr>
+			</thead>
+			<tbody>
+			@for(sx <- totalHorarPorDiaPorPlanificacion) {
+				<tr data-id="">
+					<td class="fecha">@(utils.DateUtils.formatDate(sx.getDate("fecha")))</td>
+					<td>@sx.getInteger("horas")</td>
+
+				</tr>
+			}
+			</tbody>
+		</table>
+	</div>
 </div>
 }
