--- a/app/views/novedades/listaNovedades/listaNovedadesPlanificacion.scala.html
+++ b/app/views/novedades/listaNovedades/listaNovedadesPlanificacion.scala.html
@@ -13,7 +13,9 @@
 
 					<th width="70">Fecha</th>
 					<th>Agente</th>
+
 					<th>Habiles</th>
+					<th>HS</th>
 
 
 
@@ -25,6 +27,9 @@
 						<td class="fechaRecuperoFactura">@if(rf.fecha_inicio != null){@(utils.DateUtils.formatDate(rf.fecha_inicio))}</td>
 						<td>@(rf.agente.apellido)</td>
 						<td>@if(rf.habiles){SI}else{NO}</td>
+
+						<td>@rf.horas</td>
+
 					</tr>
 				}
 			</tbody>
