--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="@routes.Assets.at("plugins/autosuggest/css/autosuggest_inquisitor.css")" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="@routes.Assets.at("plugins/jquery-ui-1.10.3/css/smoothness/jquery-ui-1.10.3.custom.min.css")" type="text/css" media="screen" charset="utf-8" />
 
-
+<link rel="stylesheet" href="@routes.Assets.at("plugins/multidatespicker/css/jquery-ui.multidatespicker.css")" type="text/css" media="screen" charset="utf-8" />
 
 
 <script src="@routes.Assets.at("plugins/jquery/jquery-2.0.3.min.js")" type="text/javascript"></script>
@@ -29,8 +29,7 @@
 <script src="@routes.Assets.at("plugins/jsapi.js")" type="text/javascript"></script>
 <script type="text/javascript" src="@routes.Assets.at("plugins/loader.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("/plugins/chart.js/Chart.min.js")"></script>
-
-
+<script type="text/javascript" src="@routes.Assets.at("/plugins/multidatespicker/js/jquery-ui.multidatespicker.js")"></script>
 
 <!-- <link rel="stylesheet" media="screen" href="@routes.Assets.at("plugins/fullcalendar-2.2.7/fullcalendar.min.css")">
 <link rel="stylesheet" media="print" href="@routes.Assets.at("plugins/fullcalendar-2.2.7/fullcalendar.print.css")">
@@ -125,9 +124,10 @@
 			@if(Modulo.check(Modulo.EQUIPOS)) {
 				<li><a class="navbar-brand @getClassEstadoActive("equipo")" href="@controllers.equipo.routes.IndexController.index()">Equipos</a></li>
 			}
+			@if(Modulo.check(Modulo.NOVEDADES)) {
 
-
-
+				<li><a class="navbar-brand @getClassEstadoActive("equipo")" href="@controllers.novedades.routes.IndexController.index()">Novedades</a></li>
+			}
 
 	        <!-- <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
