--- a/app/views/informes/navInformes.scala.html
+++ b/app/views/informes/navInformes.scala.html
@@ -32,7 +32,8 @@
 		        <li>
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">LABORATORIO <b class="caret"></b></a>
 		        	<ul class="dropdown-menu">
-			        	<li><a href="@controllers.informes.routes.InformeLaboratorioController.controlProductoPorMesPorInstitucion()" >Recepciones Productos Mensual</a></li>
+			        	<li><a href="@controllers.informes.routes.InformeLaboratorioController.controlProductoPorMesPorInstitucion(15)" >Recepciones Productos Mensual 2024</a></li>
+			        	<li><a href="@controllers.informes.routes.InformeLaboratorioController.controlProductoPorMesPorInstitucion(16)" >Recepciones Productos Mensual 2025</a></li>
 			        </ul>
 		        </li>
 		        }
